[package]
name = "klipper_cl_stepper_mcu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["esp32c6"]
esp32c6 = []
task_tracing = ["embassy-executor/rtos-trace"]
rmt_step = []

[dependencies]
# esp32c6-hal = { version = "0.8.0", features = [
#     "rt",
#     "vectored",
#     "zero-rtc-bss",
#     "embassy",
#     "async",
#     # "interrupt-preemption",
#     # "embassy-time-systick",
#     "embassy-time-timg0",
#     "flip-link",
#     "log",
# ] }
esp32c6-hal = { git = "https://github.com/esp-rs/esp-hal.git", features = [
    "rt",
    "vectored",
    "zero-rtc-bss",
    "embassy",
    "async",
    # "interrupt-preemption",
    "embassy-time-systick",
    # "embassy-time-timg0",
    "flip-link",
    "log",
] }
esp-backtrace = { version = "0.10.0", features = [
    "esp32c6",
    "panic-handler",
    # "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.9.0", features = ["esp32c6", "log"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
log = { version = "0.4.20" }
embassy-executor = { version = "0.5.0", features = [
    "arch-riscv32",
    "log",
    "nightly",
    # "rtos-trace",
    "executor-thread",
    "integrated-timers",
] }
embassy-sync = "0.5.0"
embassy-embedded-hal = "0.1.0"
embassy-time = "0.3.0"
embassy-futures = "0.1.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
static_cell = { version = "2.0.0", features = ["nightly"] }
smart-leds = "0.4.0"
smart-leds-trait = "0.3.0"
critical-section = "1.1.2"
as5600-async = { path = "as5600-async" }
heapless = { version = "0.8.0", features = ["portable-atomic"] }
nb = "1.1.0"
bitvec = { version = "1.0.1", default-features = false, features = [] }
rtos-trace = "0.1.3"

anchor = { git = "https://github.com/Annex-engineering/anchor.git" }

[build-dependencies]
anchor_codegen = { git = "https://github.com/Annex-engineering/anchor.git" }
